Fix styles that allowed fluid image layers to bleed outside of the bounding box

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -100,8 +100,18 @@ Site Structure
 	// allow fluid image containers to run full bleed
 	.container-fluid {
 		&.image-container {
-			padding-left: 0;
 			padding-right: 0;
+			padding-left: 0;
+
+			.row {
+				margin-right: 0;
+				margin-left: 0;
+			}
+
+			.col {
+				padding-right: 0;
+				padding-left: 0;
+			}
 		}
 	}
 }
